# seo-checker-mvp

./: .gitignore  A101_FIX_COMPLETE.md  BUG_JS_SITES.md  CHANGES_SUMMARY.md  DEPLOY.sh  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SESSION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FIX_A101_REPORT.md  FULL_SESSION_SUMMARY.md  HANDOFF.md  HANDOFF_NEW_SESSION.md  HANDOFF_PHASE1.md  MIGRATION_GUIDE.md  MODULE-2-COMPLETED.md  MODULE-5-COMPLETED.md  MODULE-6-COMPLETED.md  MODULE-7-PARTIAL-COMPLETED.md  NEXT_SESSION.md  PHASE1_COMPLETE.md  PHASE1_TEST_RESULTS.md  PHASE2_FINAL.md  PHASE2_PARTIAL.md  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.txt  PROMPT_FOR_NEXT_SESSION.md  QUICK_SESSION_SUMMARY.md  QUICK_SUMMARY.md  RATE_LIMITING_DISABLED.md  README.md  SESSION_SUMMARY.md  START_HERE.md  TASK-001-COMPLETED.md  TASK-002-COMPLETED.md  TASK-003-COMPLETED.md  TASK-004-COMPLETED.md  TASK-005-COMPLETED.md  TASK-006-COMPLETED.md  TASK-037-039-COMPLETED.md  (+13 more)
backend/: .env.example  .gitignore  RAILWAY_DEPLOYMENT.md  README.md  README_DEPLOYMENT.md  check.sh  mypy.ini  pyproject.toml  railway.json  requirements.txt  start.sh  test_db.py
backend/.railway/: config.json
backend/app/: __init__.py  database.py  main.py  models.py  report_builder.py  schemas.py
backend/app/checks/: __init__.py  analytics.py  base.py  check_canonical.py  check_html_sitemap.py  check_opengraph.py  check_page_speed.py  check_schema.py  headings.py  meta_tags.py  noindex.py  robots_txt.py  sitemap_xml.py
backend/app/routes/: check.py  (+1 more)
backend/migrations/: env.py
backend/tests/: __init__.py  conftest.py
(+52 files in other folders)
